plugins {
    id 'java-library'
    id 'maven-publish'
}

group   = 'tools.ds'
version = '1.0.0'  // <-- bump as you ship

java {
    toolchain { languageVersion = JavaLanguageVersion.of(21) }
    withSourcesJar()
    withJavadocJar()
}

repositories { mavenCentral() }

dependencies {
    implementation 'com.google.guava:guava:33.4.8-jre'
//    implementation 'org.apache.commons:commons-collections4:4.5.0'
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-guava"
    api platform('io.cucumber:cucumber-bom:7.27.2')
    api 'io.cucumber:cucumber-java'
    api 'io.cucumber:cucumber-core'
    api 'io.cucumber:cucumber-junit-platform-engine'

    implementation 'org.junit.platform:junit-platform-launcher:1.10.3'

    implementation 'net.bytebuddy:byte-buddy:1.17.7'
    implementation 'net.bytebuddy:byte-buddy-agent:1.17.7'

    implementation 'org.slf4j:slf4j-api:2.0.16'

    implementation 'org.junit.platform:junit-platform-suite:1.10.3'
    implementation 'org.junit.jupiter:junit-jupiter:5.10.3'
//    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    implementation 'org.junit.platform:junit-platform-launcher'

    implementation 'com.googlecode.aviator:aviator:5.4.3'

    implementation platform('com.fasterxml.jackson:jackson-bom:2.20.0')

    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.core:jackson-core'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'

    implementation 'com.jayway.jsonpath:json-path:2.9.0'
    implementation 'com.ibm.jsonata4java:JSONata4Java:2.6.0'
}

tasks.test {
    useJUnitPlatform()
    // Your test defaults, optional:
    jvmArgs '-Djdk.attach.allowAttachSelf=true'
    systemProperty 'modkit.debug', System.getProperty('modkit.debug', 'false')
    systemProperty "cucumber.filter.tags", System.getProperty("cucumber.filter.tags")
}

tasks.jar {
    // So your jar can also run as a *real* -javaagent when needed
    manifest {
        attributes(
                'Premain-Class': 'tools.ds.modkit.AgentBootstrap',
                'Agent-Class': 'tools.ds.modkit.AgentBootstrap',
                'Can-Redefine-Classes': 'true',
                'Can-Retransform-Classes': 'true'
        )
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            pom {
                name = 'modkit-cucumber'
                description = 'Cucumber + ByteBuddy runtime override toolkit'
            }
        }
    }
    repositories {
        // For local testing uncomment the next line:
        // mavenLocal()
        // (See “Remote repo” below for GitHub Packages/Maven Central)
    }
}
